# gopher-spot

./: .dockerignore  .gitignore  API.md  AUDIT-2026-07.md  CLIENTS.md  Cargo.toml  LICENSE  PROMPT.md  README.md
deploy/: audio-stream.yaml  gopher-server.yaml  kustomization.yaml  log-sink.yaml  namespace.yaml  secrets.yaml.template
design/: INVESTIGATION-now-429.md
docker/: audio-stream-entrypoint.sh  audio-stream.Dockerfile  gopher-server-entrypoint.sh  gopher-server.Dockerfile
scripts/: buildx.sh  spotify-oauth-init.sh  validate-os9.md  validate-turbogopher.md
src/: api.rs  cache.rs  dcgi.rs  latin1.rs  lib.rs  macroman.rs  main.rs  menu.rs  spotify.rs  stream.rs
tests/fixtures/: icecast-status-live.json
