[package]
name = "gopher-spot"
version = "0.1.0"
edition = "2021"
description = "A Spotify Connect control surface served over Gopher (RFC 1436) by geomyidae: a per-request dcgi that drives the Spotify Web API for TurboGopher on Mac OS 9. LAN-only homelab k8s."
license = "MIT"

[lib]
name = "gopher_spot"
path = "src/lib.rs"

[[bin]]
name = "gopher-spot"
path = "src/main.rs"

# The Web API client (search/control/now-playing) lands in Fio C behind a `net`
# feature, mirroring gopher-askthedeck: a dcgi is a short-lived per-request
# process, so it uses BLOCKING ureq (no tokio) — decided with the maintainer.
# Fio B is the offline skeleton, so no net deps yet.
# [features]
# net = ["dep:ureq", "dep:serde", "dep:serde_json"]

[dependencies]
# The shared gopher spine (menu model + .gph serializer). std-only, pinned by tag
# so the image build resolves it with only this repo checked out.
gopher-core = { git = "https://github.com/felipedbene/gopher-core", tag = "v0.2.0" }

[profile.release]
opt-level = 3
lto = true
strip = true
