[package]
name = "gopher-spot"
version = "0.1.0"
edition = "2021"
description = "A Spotify Connect control surface served over Gopher (RFC 1436) by geomyidae: a per-request dcgi that drives the Spotify Web API for TurboGopher on Mac OS 9. LAN-only homelab k8s."
license = "MIT"

[lib]
name = "gopher_spot"
path = "src/lib.rs"

[[bin]]
name = "gopher-spot"
path = "src/main.rs"

# A dcgi is a short-lived per-request process, so the Web API client uses
# BLOCKING ureq (no tokio) — decided with the maintainer. `net` gates only the
# HTTP stack (ureq); serde is always on so the response structs and the render
# functions compile offline for the test suite. `default = ["net"]` so the image
# build (`cargo build --release`) gets the client with no Dockerfile change;
# `cargo test --no-default-features` builds the pure offline core.
[features]
default = ["net"]
net = ["dep:ureq"]

[dependencies]
# The shared gopher spine (menu model + .gph serializer). std-only, pinned by tag
# so the image build resolves it with only this repo checked out.
gopher-core = { git = "https://github.com/felipedbene/gopher-core", tag = "v0.2.0" }
# Response models + JSON. Always on (small) so structs/render are testable offline.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTPS for the Spotify Web API + the OAuth token exchange. rustls-backed
# (ring builds on both amd64 and arm64 — both little-endian, so no big-endian
# caveat here). A per-request dcgi wants a blocking client with no async runtime.
ureq = { version = "2", optional = true, default-features = false, features = ["tls", "json"] }

[profile.release]
opt-level = 3
lto = true
strip = true
